--- a/talismane_machine_learning/src/main/resources/reference.conf
+++ b/talismane_machine_learning/src/main/resources/reference.conf
@@ -1,21 +1,20 @@
 talismane {
-	machine-learning {
+	### These parameters concern training only
+	### It is assumed that after training, each persisted model will be self-contained in terms of its parameters
+	machineLearning {
 		# Which algorithm to choose? options are MaxEnt, LinearSVM, LinearSVMOneVsRest, Perceptron, PerceptronRanking
 		algorithm = "LinearSVM"
-		
-		# The path to the feature-descriptor file
-		feature-descriptors = "features.txt"
 		
 		# In how many distinct events should a feature appear in order to get included in the model?
 		cutoff = 0
 		
 		# Parameters for linear-svm family models (LinearSVM, LinearSVMOneVsRest)
-		linear-svm {
+		linearSVM {
 			# The solver type. Options are:
 			# L2R_LR: L2-regularized logistic regression (primal)
 			# L1R_LR: L1-regularized logistic regression
 			# L2R_LR_DUAL: L2-regularized logistic regression (dual)
-			solver-type = "L2R_LR"
+			solverType = "L2R_LR"
 			
 			# Parameter C, typical values are powers of 2, from 2^-5 to 2^5
 			cost = 1.0
@@ -26,7 +25,7 @@ talismane {
 			# If one vs. rest is used, should we balance the event counts so that
 			# the current outcome events are approximately proportional to the
 			# other outcome events?
-			balance-event-counts = false
+			balanceEventCounts = false
 		}
 		
 		# Parameters for Maximum Entropy models
@@ -51,7 +50,19 @@ talismane {
 			
 			# If true, will only average for iterations <= 20 and then for all perfect
 			# squares (25, 36, 49, 64, 81, 100, etc.).
-			average-at-intervals = false
+			averageAtIntervals = false
+			
+			# method for scoring perceptron classifiers.
+			# * additive: Use standard additive perceptron scoring, where each state's score is
+			#      the sum of scores of incremental states.
+			# * normalisedLinear:  Use a geometric mean of state probabilities, where the probability is
+			#      calculated by first transforming all scores to positive (minimum = 1),
+			#      and then dividing by the total.
+			# * normalisedExponential: Use a geometric mean of state probabilities, where the probability is
+			#      e^{score/absmax(scores)}, where absmax is the maximum absolute value
+			#      of scores. This gives us positive scores from 1/e to e. We then
+			#      divide by the total.
+			scoring = "additive"
 		}
 	}
 }
