--- a/talismane_core/pom.xml
+++ b/talismane_core/pom.xml
@@ -70,12 +70,16 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>com.joliciel.talismane</groupId>
-			<artifactId>talismane-machine-learning</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.joliciel.talismane</groupId>
+			<artifactId>talismane-machine-learning</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
