--- a/talismane_machine_learning/pom.xml
+++ b/talismane_machine_learning/pom.xml
@@ -75,6 +75,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.joliciel.talismane</groupId>
 			<artifactId>talismane-utils</artifactId>
 		</dependency>
