Make module blank by default, but overrides startModule and endModule if provided
This is in order to restore the functionality where one can run evaluate
specifying module=posTagger, rather than having to specifying startModule
and endModule for the general case where we're only evaluating one step.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -20,13 +20,15 @@ talismane {
 		# In server mode, which port to listen on
 		port = 7272
 		
-		# Modules are used by all commands, but can be overwritten by startModule and endModule for analyse
+		# Modules are used by all commands
+		# If provided, it will override startModule and endModule for analyse/evaluate/compare
+		# It is required for train|process
 		# - language|languageDetector
 		# - sentence|sentenceDetector
 		# - tokenise|tokeniser
 		# - postag|posTagger
 		# - parse|parser
-		module = parser
+		module = ""
 		
 		# if inFile and inDir are not specified, Talismane will read from STDIN
 		# use inFile if a specific file is being read
