Add oneVsRest as a LinearSVM config option
Rather than forcing the client to choose a separate algorithm.
Also, removed the MachineLearnignModelType, which is no longer used,
since ranking models were removed.

--- a/talismane_machine_learning/src/main/resources/reference.conf
+++ b/talismane_machine_learning/src/main/resources/reference.conf
@@ -2,13 +2,13 @@ talismane {
 	### These parameters concern training only
 	### It is assumed that after training, each persisted model will be self-contained in terms of its parameters
 	machineLearning {
-		# Which algorithm to choose? options are MaxEnt, LinearSVM, LinearSVMOneVsRest, Perceptron, PerceptronRanking
+		# Which algorithm to choose? options are MaxEnt, LinearSVM, Perceptron
 		algorithm = "LinearSVM"
 		
 		# In how many distinct events should a feature appear in order to get included in the model?
 		cutoff = 0
 		
-		# Parameters for linear-svm family models (LinearSVM, LinearSVMOneVsRest)
+		# Parameters for linear-svm family models
 		linearSVM {
 			# The solver type. Options are:
 			# L2R_LR: L2-regularized logistic regression (primal)
@@ -21,6 +21,9 @@ talismane {
 			
 			# Parameter epsilon, typical values are 0.01, 0.05, 0.1, 0.5
 			epsilon = 0.1
+			
+			# should we treat each outcome explicity as one vs. rest, allowing for an event to have multiple outcomes?	
+			oneVsRest = false
 			
 			# If one vs. rest is used, should we balance the event counts so that
 			# the current outcome events are approximately proportional to the
