--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -9,9 +9,6 @@ talismane {
 		# - compare: Compare two annotated corpora.
 		command = analyse
 		
-		# A language pack makes it possible to provide default models and lexicons for analysing in a certain language
-		languagePack = ""
-		
 		# Which mode to run in:
 		# - normal: Command line mode, reading from standard in or file, and writing to standard out or file.
 		# - server: Server listening on port, and processing input as it comes.
@@ -28,29 +25,29 @@ talismane {
 		# - tokenise|tokeniser
 		# - postag|posTagger
 		# - parse|parser
-		module = ""
+		#module = null
 		
 		# if inFile and inDir are not specified, Talismane will read from STDIN
 		# use inFile if a specific file is being read
-		inFile = ""
+		#inFile = null
 		# use inDir if a full directory needs to be processed
-		inDir = ""
+		#inDir = null
 		
 		# if outFile and outDir are not specified, Talismane will write to STDOUT
 		# use outFile to write all output to a single file
-		outFile = ""
+		#outFile = null
 		# use outDir to write output to a directory - in combination with inDir, will write one file out per file read in
-		outDir = ""
+		#outDir = null
 				
 		# if encoding is not provided, the default encoding for the system will be used
-		encoding = "UTF-8"
+		#encoding = null
 		
 		# inputEncoding and outputEncoding can override encoding
-		inputEncoding = ""
-		outputEncoding = ""
+		#inputEncoding = null
+		#outputEncoding = null
 		
 		# The locale in which we are analysing - required if not provided in the language pack
-		locale = ""
+		#locale = null
 		
 		analyse {
 			# at which stage should analysis start
@@ -60,32 +57,31 @@ talismane {
 			endModule = parser
 			
 			### Path to the pos-tag set (required if not in the language-pack)
-			posTagSet = ""
+			#posTagSet = null
 			
 			### The transition system used: ArcEager or ShiftReduce
 			transitionSystem = "ArcEager"
 			
 			### Path to the list of possible dependency labels (required if not in the language-pack)
-			dependencyLabels = ""
+			#dependencyLabels = null
 			
 			### Paths for finding the models
-			languageModel = ""
-			sentenceModel = ""
-			tokeniserModel = ""
-			posTaggerModel = ""
-			parserModel = ""
+			#languageModel = null
+			#sentenceModel = null
+			#tokeniserModel = null
+			#posTaggerModel = null
+			#parserModel = null
 			
-			### Which lexicon to use when analysing. The lexicon is used to find lemmas and morphosyntaxic attributes for known words, and to feed various analysis features
-			# if the path is preceded by the string "replace:", the default lexicon of the current language-pack are replaced, otherwise the lexicon is added after the language-pack lexicons
-			lexicon = ""
+			### Which list of lexicons to use when analysing. The lexicons are used to find lemmas and morphosyntaxic attributes for known words, and to feed various analysis features
+			lexicons = []
 			
 			# Whether to preload the lexicon, or only load it the first time its needed
 			# the latter option is only really useful to save time when we're sure the lexicon will not be needed (e.g. command=process)
-			preloadLexicon = true
+			preloadLexicons = true
 			
 			### A path to a precompiled "diacriticizer", which adds diacritics to words in ALL UPPERCASE prior to analysis.
 			# if left blank, a diacriticizer is automatically constructed from the lexicon, but this takes more time at startup.
-			diacriticizer = ""
+			#diacriticizer = null
 			
 			############################################
 			### Parameters controlling how data is input
@@ -94,17 +90,22 @@ talismane {
 			# The default for tokenised text (pos-tagger analysis or tokeniser evaluation) is: ".+\t%TOKEN%"
 			# The default for pos-tagged text (parser analysis or pos-tagger evaluation) is: ".*\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t"
 			# The default for parsed text (parser evaluation) is: "%INDEX%\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t%NON_PROJ_GOVERNOR%\t%NON_PROJ_LABEL%\t%GOVERNOR%\t%LABEL%"
-			inputPattern = ""
+			#inputPattern = null
 			# File path to a regex
-			inputPatternFile = ""
+			#inputPatternFile = null
 			
 			### Paths to files containing filters
-			# if these paths are preceded by the string "replace:", the default filters of the current language-pack are replaced, otherwise these tilters are added after the language-pack filters
-			# All of these paths can refer to multiple filter files, separated by semicolons
-			textFilters = ""
-			tokenFilters = ""
-			tokenSequenceFilters = ""
-			posTagSequenceFilters = ""
+			# If the associated replace parameter is set to true, the model filters are replaced by this list, otherwise this list is added before the model filters
+			textFilters = []
+			tokenFilters = []
+			tokenFiltersReplace = false
+			tokenSequenceFilters = []
+			tokenSequenceFiltersReplace = false
+			posTagSequenceFilters = []
+			posTagSequenceFiltersReplace = false
+			
+			# The paths to various external resources, separated by semicolons
+			externalResources = []
 			
 			# How to handle the newline character, options are SPACE (will be replaced by a space) and SENTENCE_BREAK (will break sentences)
 			newline = SENTENCE_BREAK
@@ -132,19 +133,18 @@ talismane {
 			builtInTemplate = "default"
 			
 			# if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
-			template = ""
+			#template = null
 
 			# if true, will spew out a file full of low-level analysis details for certain model types
 			includeDetails = false
 			
 			### Paths to files containing rules
-			# if these paths are preceded by the string "replace:", the default rules of the current language-pack are replaced, otherwise these rules are added after the language-pack rules
-			posTaggerRules = ""
-			parserRules = ""
+			posTaggerRules = []
+			parserRules = []
 			
 			# If output includes the filename (as in builtInTemplate "with_location"), we can give the name of the file to use.
 			# This is only useful in server mode, when the filename is unknown. If an input file is processed, its name is used by default.
-			fileName = ""
+			#fileName = null
 			
 			# If provided, will add this suffix to all output files (both in analysis and evaluation). Useful when comparing configurations.
 			suffix = ""
@@ -213,24 +213,24 @@ talismane {
 		
 		evaluate {
 			# The file to evaluate against the inputFile
-			evaluationFile = ""
+			#evaluationFile = null
 			
 			# If one of these is provided, it will override the default handling of evaluation input
 			# Note that this is distinct from analyse.inputPattern, which indicates how the "gold" file will be read
 			# A regex for reading input, with various placeholders
-			evaluationPattern = ""
+			#evaluationPattern = null
 			# File path to a regex
-			evaluationPatternFile = ""
+			#evaluationPatternFile = null
 			
 			csv {
 				# Which character should separate cells in the CSV files generated
 				separator = "\t"
 			
 				# Which encoding to generate CSV files in. If blank will use the default encoding for the current OS.
-				encoding = ""
+				#encoding = null
 				
 				# Which locale to use for CSV number formatting. If blank will use the default locale for the current OS.
-				locale = ""
+				#locale = null
 			}
 			
 			posTagger {
@@ -253,7 +253,7 @@ talismane {
 				includeDistanceFScores = false
 				
 				# Label to be skipped when calculating distance f-scores - for arbitrary distance attachments in the case of punctuation
-				skipLabel = ""
+				#skipLabel = null
 				
 				### Output the transitions applied
 				# If true, writes the list of transitions that were actually applied, one at a time.
@@ -261,7 +261,7 @@ talismane {
 				
 				# If included, will output in the transition log, at the end of each parse, the correct sentence and erroneous sentence
 				# if the error concerned any one of these comma-separated dependency labels
-				errorLabels = ""
+				errorLabels = []
 			}
 			
 			crossValidation {
@@ -301,52 +301,49 @@ talismane {
 			
 			# A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
 			# making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
-			corpusLexicalEntryRegex = ""
+			#corpusLexicalEntryRegex = null
 			
 			posTagFeatureTester {
-				# a set of ;-separated words to test pos-tag features on, other words will be skipped
-				testWords = ""
+				# a list of words to test pos-tag features on, other words will be skipped
+				testWords = []
 			}
 		}
 		
 		train {
-			# The paths to various external resources, separated by semicolons
-			externalResources = ""
-
 			languageDetector {
 				# A path to a file containing language detector feature descriptors
-				features = ""
+				#features = null
 				
 				# A path to a file listing, for each language, the path to its corpus.
 				# Format is locale code, followed by a tab, followed by the path to a file containing the corpus.
-				languageCorpusMap = ""
+				#languageCorpusMap = null
 			}
 			
 			sentenceDetector {
 				# A path to a file containing sentence detector feature descriptors
-				features = ""
+				#features = null
 			}
 			
 			tokeniser {
 				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
 				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
-				sentenceReader = ""
+				#sentenceReader = null
 				
 				# A path to a file containing tokeniser feature descriptors
-				features = ""
+				#features = null
 				
 				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
-				patterns = ""
+				#patterns = null
 			}
 			
 			posTagger {
 				# A path to a file containing pos-tagger feature descriptors
-				features = ""
+				#features = null
 			}
 			
 			parser {
 				# A path to a file containing parser feature descriptors
-				features = ""
+				#features = null
 			}
 			
 			# iterations at which the perceptron model should be saved
