Remove LanguageDetector and SentenceDetector services
Also, split ExternalResource (for training) and WordList (for TokenFilters).
All for code simplification and reducing unneeded dependencies.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -104,8 +104,8 @@ talismane {
 			posTagSequenceFilters = []
 			posTagSequenceFiltersReplace = false
 			
-			# The paths to various external resources, separated by semicolons
-			externalResources = []
+			# The paths to various external word lists (can be either folders or files), separated by semicolons
+			wordLists = []
 			
 			# How to handle the newline character, options are SPACE (will be replaced by a space) and SENTENCE_BREAK (will break sentences)
 			newline = SENTENCE_BREAK
@@ -310,6 +310,9 @@ talismane {
 		}
 		
 		train {
+			# The paths to various external resources (can be either folders or files), separated by semicolons
+			externalResources = []
+			
 			languageDetector {
 				# A path to a file containing language detector feature descriptors
 				#features = null
