Get rid of TokeniserService
To remove unneeded dependencies and dependency injection.
Also collapsed various interfaces into their classes, and changed RegexReaders
to get their regex from the configuration, pushing the default regexes
into reference.conf.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -211,6 +211,60 @@ talismane {
 			}
 		}
 		
+		train {
+			# The paths to various external resources (can be either folders or files), separated by semicolons
+			externalResources = []
+			
+			languageDetector {
+				# A path to a file containing language detector feature descriptors
+				#features = null
+				
+				# A path to a file listing, for each language, the path to its corpus.
+				# Format is locale code, followed by a tab, followed by the path to a file containing the corpus.
+				#languageCorpusMap = null
+			}
+			
+			sentenceDetector {
+				# A path to a file containing sentence detector feature descriptors
+				#features = null
+			}
+			
+			tokeniser {
+				# the regex used to read tokens from the training corpus
+				readerRegex = ".+\t%TOKEN%"
+				
+				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
+				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
+				#sentenceReader = null
+				
+				# A path to a file containing tokeniser feature descriptors
+				#features = null
+				
+				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
+				#patterns = null
+			}
+			
+			posTagger {
+				# the regex used to read tokens from the training corpus
+				readerRegex = ".*\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t"
+				
+				# A path to a file containing pos-tagger feature descriptors
+				#features = null
+			}
+			
+			parser {
+				# the regex used to read tokens from the training corpus
+				readerRegex = "%INDEX%\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t%NON_PROJ_GOVERNOR%\t%NON_PROJ_LABEL%\t%GOVERNOR%\t%LABEL%"
+
+				# A path to a file containing parser feature descriptors
+				#features = null
+			}
+			
+			# iterations at which the perceptron model should be saved
+			# TODO: this really belongs in the machine-learning conf, and will be moved there eventually
+			perceptronObservationPoints = []
+		}
+		
 		evaluate {
 			# The file to evaluate against the inputFile
 			#evaluationFile = null
@@ -233,7 +287,15 @@ talismane {
 				#locale = null
 			}
 			
+			tokeniser {
+				# the regex used to read tokens from the evaluation corpus
+				readerRegex = ${talismane.core.train.tokeniser.readerRegex}
+			}
+			
 			posTagger {
+				# the regex used to read tokens from the evaluation corpus
+				readerRegex = ${talismane.core.train.posTagger.readerRegex}
+
 				# if true, will add files ending with "_unknown.csv" and "_known.csv" splitting pos-tagging f-scores into known and unknown words
 				includeUnknownWordResults = false
 				
@@ -242,6 +304,9 @@ talismane {
 			}
 			
 			parser {
+				# the regex used to read tokens from the evaluation corpus
+				readerRegex = ${talismane.core.train.parser.readerRegex}
+
 				# If true, takes both governor and dependency label into account when determining errors. If false, only the governor is taken into account.
 				labeledEvaluation = true
 				
@@ -307,51 +372,6 @@ talismane {
 				# a list of words to test pos-tag features on, other words will be skipped
 				testWords = []
 			}
-		}
-		
-		train {
-			# The paths to various external resources (can be either folders or files), separated by semicolons
-			externalResources = []
-			
-			languageDetector {
-				# A path to a file containing language detector feature descriptors
-				#features = null
-				
-				# A path to a file listing, for each language, the path to its corpus.
-				# Format is locale code, followed by a tab, followed by the path to a file containing the corpus.
-				#languageCorpusMap = null
-			}
-			
-			sentenceDetector {
-				# A path to a file containing sentence detector feature descriptors
-				#features = null
-			}
-			
-			tokeniser {
-				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
-				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
-				#sentenceReader = null
-				
-				# A path to a file containing tokeniser feature descriptors
-				#features = null
-				
-				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
-				#patterns = null
-			}
-			
-			posTagger {
-				# A path to a file containing pos-tagger feature descriptors
-				#features = null
-			}
-			
-			parser {
-				# A path to a file containing parser feature descriptors
-				#features = null
-			}
-			
-			# iterations at which the perceptron model should be saved
-			# TODO: this really belongs in the machine-learning conf, and will be moved there eventually
-			perceptronObservationPoints = []
 		}
 		
 		# if set to true, the total time of talismane execution will be written to a separate file
