--- a/talismane_distribution/pom.xml
+++ b/talismane_distribution/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>3.0.1-SNAPSHOT</version>
+		<version>3.0.1</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 
