--- a/talismane_core/pom.xml
+++ b/talismane_core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>3.0.1</version>
+		<version>3.0.2-SNAPSHOT</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<build>
